# ansible-postgresql

./: .yamllint  README.md  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  playbook.yml  prepare.yml  verify.yml
molecule/pgaudit/: converge.yml  molecule.yml  verify.yml
molecule/postgis/: converge.yml  verify.yml
molecule/timescale/: converge.yml  molecule.yml  verify.yml
tasks/: configure_postgres.yml  init_postgres.yml  install.yml  main.yml
tasks/extension/: PostgREST.yaml  pg_graphql.yaml  pgaudit.yaml  postgis.yaml  timescale.yaml
templates/: pg_hba.conf.j2  postgresql.conf.j2
templates/installation/: postgrest.conf.j2  postgrest.service.j2  timescale.repo.j2
