[tool.poetry]
name = "ansible-postgresql"
version = "0.1.0"
description = ""
authors = ["Attilio Greco <attilio.greco.gapmilano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "<5"
molecule = "^3.6.0"
molecule-libvirt = "^0.0.5"
libvirt-python = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
